--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: James's Cookbook
-email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   A collection of recipes which I've adapted to suit my cooking style
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://jamesvanmil.github.io/cookbook" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "cookbook" # the subpath of your site, e.g. /blog
+url: "https://jamesvanmil.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  jamesvanmil
 
 # Build settings
